Kap. Trainingstag planen angefügt

--- a/main.tex
+++ b/main.tex
@@ -324,6 +324,34 @@ wesentlich dichter ist und das man bei einer nicht reparierbaren Panne oder tota
 mitsamt dem \rv{} nutzen kann. Auch könnte man sich mit den eingesparten Kosten auch ein Taxi leisten.
 
  
+
+\section{Tagesplanung}
+
+Ein Vorschlag für eine Tagesplanung findet sich bei \citeNC{Boehme2016trainingstag}.
+
+\begin{itemize*}
+  \item 08:00 Uhr Frühstück: mindestens 2 Stunden vor dem Training frühstücken.
+    Dabei auf kurz- und langkettige Kohlenhydrate sowie Proteine achten.
+  \item 09:30 Uhr Radcheck
+  \item 10:00 Uhr Ausfahrt: Wenn länger als 4 Stunden unterbrochen durch eine 15-30-minütige Pause mit Kohlenhydraten.
+  \item 15:00 Uhr spätes Mittagessen
+  \item 16:00 Uhr Gymnastik: aufdehnen und strecken (z.B. mit Yoga)
+  \item 16:30 Uhr Powernap
+  \item 19:00 Uhr Abendessen
+  \item 22:00 Uhr Schlafen
+\end{itemize*}
+
+Wer allerdings sein TL in einer noch kühlen Jahreszeit durchführt, der Radelt mit obigem Programm
+in Eiseskälte los und und ist zur wärmsten Tageszeit (Nachmittag) schon wieder zu Hause.
+Obige Zeiteinteilung ist also perfekt für den Sommer, dass man zur heissesten Tageszeit seine Siesta machen kann.
+Für Training bei uns in den Monaten Februar und März eigenen sich die Nachmittagsstunden besser.
+
+\citeNP[Seite 873]{Weineck2010} empfielt, das Frühstück auf zwei
+Teile aufzuteilen (z.B. 06:00 und 09:00 Uhr). Durch das 2. Frühstück
+soll der Leistungsabfall am vormittag abgefangen und der Tiefpunkt am Mittag
+abgemildert werden.
+
+
 \section{Training in Kälte}
 
 \subsubsection{Körperliche Adaption}
