--- a/trainingslager.bib
+++ b/trainingslager.bib
@@ -121,6 +121,17 @@
   otherinfo = {}
 }
 
+
+@ARTICLE{Boehme2016trainingstag,
+  author = {B{\"o}hme, Tim},
+  title = {{D}er perfekte {T}rainingstag},
+  journal = RB,
+  year = {2016},
+  number = {01/16},
+  pages = {70--71},
+  otherinfo = {}
+}
+
 @ARTICLE{Beck2015,
         author = {Beck, Daniel},
         title = {{D}as perfekte {T}rainingslager -- {B}asis {C}amp},
