--- a/trainingslager.bib
+++ b/trainingslager.bib
@@ -229,4 +229,23 @@
         year =2016,
         url = {https://www.swiss.com/ch/de/vorbereiten/gepaeck/spezialgepaeck},
         lastchecked = {07.01.2015},
+
 }
+
+@BOOK{Konopka2006radsport,
+        author = {Konopka, Peter},
+        title = {Radsport: der {R}atgeber f{\"u}r {A}usr{\"u}stung, {T}echnik, {T}raining, {E}rn{\"a}hrung, {W}ettkampf und {M}edizin} ,
+        publisher = {BLV Buchverlag},
+        year = {2006},
+        edition = {9},
+}
+
+@BOOK{Boehme2014rennradtraining,
+        author = {Tim B{\"o}hme and Jochen Haar},
+        title = {{R}ennrad-{T}raining},
+        publisher = {Bruckmann},
+        year = {2014},
+        edition = {1},
+}
+
+
