--- a/main.tex
+++ b/main.tex
@@ -58,10 +58,10 @@
 %\clearpage
 
 \begin{abstract}
-Dieser Text beschreibt die Vorbereitung und Durchführung eines \rv-Traininglager zu Hause.
-Dabei werden insbesondere die möglichen Nachteile eingegangen,
-und wie diesen begegnet werden kann und allenfalls sogar als Vorteile genutzt werden können.
-Das Ziel ist der optimale Nutzen für das Training für die aufgewendete Zeit.
+Diese Zusammenstellung enthält Tipps zur Vorbereitung und Durchführung eines einwöchigen \rv-Trainingslager zu Hause (\tlzh).
+Dabei werden die Vor- und Nachteile erörtert im Vergleich zu einem konventionellen Trainingslager
+(typischerweise fremdorganisiert und in mediterranen Regionen). 
+Dies mit dem Ziel eines optimalen Resultates im Verhältnis zur aufgewendeten Zeit und anfallenden Kosten.
 \end{abstract}
 
 \tableofcontents
@@ -97,8 +97,10 @@ Die Mitnahme des eigenen Fahrrades kostet bei der Swiss in Europaflügen CHF 60 
 Bei Mitnahme des eigenen Rades mit dem Flieger kommt allenfalls ein Transportbehälter.
 Die Preisspanne in einem Vergleich von 4 Radkoffern und 6 Radtaschen in der Zeitschrift RoadBIKE ging von EUR 300 bis 800
 \cite{Brunker2015radkoffer}.
-
 Das ist ein Haufen Schotter.
+
+% Hier noch: Verhältnis gefahrener Trainingskilometer zu aufgewendetem Geld, bzw. aufgewendeten Ferientagen.
+
 Doch fast noch wertvoller als Geld ist heute Zeit.
 Bei einem TL in einem anderen Gegend von Europa muss realistischerweise für Hin- und Rückreise je einen Tag gerechnet werden.
 Zwei wertvolle Tage, die man in irgenwelchen Flughäfen und nicht im Sattel sitzt?
