--- a/main.tex
+++ b/main.tex
@@ -67,23 +67,26 @@ Dies mit dem Ziel eines optimalen Resultates im Verhältnis zur aufgewendeten Ze
 \tableofcontents
 \section{Einleitung}
 
-Ein Trainingslager (TL) am Beginn der \rv-Saison bietet eine gute Möglichkeit
-konzentriert die Grundlagen für die anstehende Saison festzuzurren.
-Zudem können in einer solchen
-Zeit, in der man ganz in das Thema eintaucht, Nebenprojekte umgesetzt und die
-Motivation gestärkt werden.
+Ein Trainingslager (TL) im Frühling dient dazu
+schon früh stabile Grundlagen für die anstehende \rv-Saison zu legen.
+Neben dem körperlichen Training kann man sich in einem TL auch mit anderen Themen rund um das Training beschäftigen.
+Beispiele sind: Ernährung, Regeneration, \rv-Technik oder Radrennhistorie.
+Durch eine solche Immersion in die Materie wird die Motivation weit über das TL hinaus gestärkt.
 
-Wird von einem Trainings\textsl{lager} gesprochen, impliziert das ein Ortswechsel an einen Ort,
-wo Frühling ist, wenn in Nord- und Mitteleuropa noch Schnee liegt und damit früher mit
-spezifischem Training begonnen werden kann.
+Wird von einem Trainings\textsl{lager} gesprochen, impliziert das ein Ortswechsel.
+Typischerweise an einen Ort, wo Frühling ist, wenn in Nord- und Mitteleuropa noch Eis und Schnee herrscht.
 
-Ich habe mich allerdings schon früh entschlossen, ein solches Trainingslager nicht
-auf Mallorca und Co. durchzuführen, sondern zu Hause.
-Ich bin überzeugt, dass ein \tlzh{} viel mehr Vor- als Nachteile hat.
-Der folgende Text soll helfen, diese Vorteile gut zu nutzen und die allfälligen Nachteile
+In der Regel wird dazu ein Pauschalangebot mit Hotel, geführten Trainingstouren und Möglichkeit der \rv-Miete.
+Etwas luxuriösere Angeboten bieten noch Trainingsplanung, Begleitfahrzeug, Schrauberplatz und Massage.
+
+Es gibt m.E. jedoch wenig wirklich objektive Gründe, als Nicht-Profi für ein TL zu verreisen.
+Umso mehr, als ein solches TL sich prima zu Hause durchführen lässt.
+Ich bin überzeugt, dass ein \tlzh{} mehr Vor- als Nachteile hat und genau so viel Spass macht.
+Die folgende Zusammenstellung von Tipps und Hinweisen soll helfen, die Vorteile gut zu nutzen und allfällige Nachteile
 auszugleichen.
-Ein etwas missionarischer Unterton konnte sich beim Schreiben nicht ganz vermeiden lassen.
-Im Abschnitt \ref{sec:wiesozuhause} beschreibe ich die Vor- und Nachteile eines \tlzh{}.
+
+% Hier kommt dann noch eine Inhaltsangabe der Kapitel.
+% Im Abschnitt \ref{sec:wiesozuhause} beschreibe ich die Vor- und Nachteile eines \tlzh{}.
 
 \section{Wieso ein Trainingslager zu Hause?}
 \label{sec:wiesozuhause}
@@ -329,7 +332,7 @@ mitsamt dem \rv{} nutzen kann. Auch könnte man sich mit den eingesparten Kosten
 
 \section{Tagesplanung}
 
-Ein Vorschlag für eine Tagesplanung findet sich bei \citeNC{Boehme2016trainingstag}.
+Ein Vorschlag für eine Tagesplanung findet sich bei \citeNP{Boehme2016trainingstag}.
 
 \begin{itemize*}
   \item 08:00 Uhr Frühstück: mindestens 2 Stunden vor dem Training frühstücken.
