Tagesplan von Listen- in Tabellenform geändert.

--- a/main.tex
+++ b/main.tex
@@ -334,17 +334,26 @@ mitsamt dem \rv{} nutzen kann. Auch könnte man sich mit den eingesparten Kosten
 
 Ein Vorschlag für eine Tagesplanung findet sich bei \citeNP{Boehme2016trainingstag}.
 
-\begin{itemize*}
-  \item 08:00 Uhr Frühstück: mindestens 2 Stunden vor dem Training frühstücken.
-    Dabei auf kurz- und langkettige Kohlenhydrate sowie Proteine achten.
-  \item 09:30 Uhr Radcheck
-  \item 10:00 Uhr Ausfahrt: Wenn länger als 4 Stunden unterbrochen durch eine 15-30-minütige Pause mit Kohlenhydraten.
-  \item 15:00 Uhr spätes Mittagessen
-  \item 16:00 Uhr Gymnastik: aufdehnen und strecken (z.B. mit Yoga)
-  \item 16:30 Uhr Powernap
-  \item 19:00 Uhr Abendessen
-  \item 22:00 Uhr Schlafen
-\end{itemize*}
+\begin{table}
+  \centering
+  \begin{tabular}{cll}
+    \toprule
+    Zeit & Tätigkeit & Bemerkungen \\
+    \midrule
+ 08:00 Uhr & Frühstück & mindestens 2 Stunden vor dem Training frühstücken.\\
+  09:30 Uhr & Radcheck & \\
+  10:00 Uhr & Ausfahrt & bei 4 Stunden unterbrochen durch eine 15-30-minütige Pause \\
+  15:00 Uhr & spätes Mittagessen & \\
+  16:00 Uhr & Gymnastik & aufdehnen und strecken (z.B. mit Yoga) \\
+  16:30 Uhr & Powernap & \\
+  19:00 Uhr & Abendessen & \\
+  22:00 Uhr & Schlafen & \\
+    \bottomrule
+  \end{tabular}
+  \caption{Vorschlag für eine Tagesplanung. Wieso diese für ein \tlzh{} angepasst werden sollte im Text. }
+  \label{tab:tagesplanboehme}
+\end{table}
+
 
 Wer allerdings sein TL in einer noch kühlen Jahreszeit durchführt, der Radelt mit obigem Programm
 in Eiseskälte los und und ist zur wärmsten Tageszeit (Nachmittag) schon wieder zu Hause.
