Kleine Änderung im Abschnitt Tagesplanung

--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
-% Datei: Documents/rennvelo/trainingswoche/main.tex
+% Datei: Documents/rennvelo/trainingslager/main.tex
 % Begonnen: 14.11.2015 
-% Letzte Änderung: 06.01.2016 
+% Letzte Änderung: 02.02.2016 
 %
-% Einteilung des Paperformates, des Satzspiegels und eine Bindekorrektur von 1 cm
+% Einteilung des Paperformates, des Satzspiegels und eine Bindekorrektur
 \documentclass[a4paper,DIV13,BCOR0cm]{scrartcl}
 
 \usepackage[english,ngerman]{babel}
@@ -33,7 +33,7 @@
 \usepackage{apacite}
 %\usepackage{hyperref}
 
-\setcounter{secnumdepth}{2}
+\setcounter{secnumdepth}{1}
 
 % Als Schweizer musste diese Option einfach sein.
 \newcommand{\rv}{Rennvelo}
@@ -52,7 +52,7 @@
 \author{Marco Strehler}
 
 %\publishers{}
-\date{11.\,Dezember\,2015}
+\date{02.\,Februar\,2016}
 
 \maketitle
 %\clearpage
@@ -307,12 +307,6 @@ Ideal wäre hier, das TL in den Wochen 6, 5 oder 3 dieser Vorbereitungsphase zu 
 
 \end{itemize*}
 
-Weitere Feinheiten der Trainingsplanung wäre ein <<Splitting>> der Einheiten.
-Das durchführen von mehreren Trainingseinheiten am Tag hat den Vorteile,
-dass dem allenfalls schlechten oder kalten Wetter Rechnung getragen wird.
-Auch können in zwei kürzeren Einheiten intensivere Einsätze geplant werden.
-Auch gibt es einen doppelten Stimulus.
-Dazwischen 2-4 Stunden Pause, am besten mit einer Schlafphase (Ausschüttung Wachstumshormon).
 
 \section{Streckenplanung}
 
@@ -365,6 +359,12 @@ Teile aufzuteilen (z.B. 06:00 und 09:00 Uhr). Durch das 2. Frühstück
 soll der Leistungsabfall am vormittag abgefangen und der Tiefpunkt am Mittag
 abgemildert werden.
 
+Weitere Feinheiten der Trainingsplanung wäre ein <<Splitting>> der Einheiten.
+Das durchführen von mehreren Trainingseinheiten am Tag hat den Vorteile,
+dass dem allenfalls schlechten oder kalten Wetter Rechnung getragen wird.
+Auch können in zwei kürzeren Einheiten intensivere Einsätze geplant werden.
+Auch gibt es einen doppelten Stimulus.
+Dazwischen 2-4 Stunden Pause, am besten mit einer Schlafphase (Ausschüttung Wachstumshormon).
 
 \section{Training in Kälte}
 
