Test: Änderung in roadbike.bib

--- a/main.tex
+++ b/main.tex
@@ -517,6 +517,7 @@ Das Risiko ist bei einem TL in einem exotischen Ort mit einem verlockenden Buffe
 
 
 \bibliographystyle{apacite}
-\bibliography{trainingslager.bib}
+% \bibliography{trainingslager.bib}
+\bibliography{/roadbikebib/roadbike.bib}
 
 \end{document}
