Tabelle Preisvergleich 1-Wo Mallorca angefügt

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % Datei: Documents/rennvelo/trainingslager/main.tex
 % Begonnen: 14.11.2015 
-% Letzte Änderung: 02.02.2016 
+% Letzte Änderung: 08.02.2016 
 %
 % Einteilung des Paperformates, des Satzspiegels und eine Bindekorrektur
 \documentclass[a4paper,DIV13,BCOR0cm]{scrartcl}
@@ -93,18 +93,44 @@ auszugleichen.
 
 \subsection{Vorteile eines \tlzh}
 
-Der grösste Vorteil vorweg: ein \tlzh{} kommt um einiges günstiger als ein TL in einem der üblichen Destinationen.
-Die Anreise und das Camp selbst, allenfalls Transport des \rv{} oder Miete vor Ort kommen kaum unter 2000 - 3000 Euro.
+Der augenscheinlichste Vorteil:
+ein \tlzh{} kommt \emph{wesentlich günstiger} als ein TL an einer der üblichen Destinationen.
+Die Preise für fremdorganisierte TL unterscheiden sich stark
+und sind abhängig von der Hotel-Qualität und dem gebotenen Service.
+(für den von vielen angebotene Klassiker Mallorca siehe Tabelle \ref{tab:preisvergleich}.
+Zu den Kosten des TL kommt der der Flug, allenfalls Transport des \rv{} oder dessen Miete vor Ort.
 Die Mitnahme des eigenen Fahrrades kostet bei der Swiss in Europaflügen CHF 60 (EUR 50) und bei Interkoninentalflügen CHF 120 (EUR 100)
 \cite{swiss2016fahrradmitnahme}. Die Preise anderer Anbieter sind vergleichbar.
-Bei Mitnahme des eigenen Rades mit dem Flieger kommt allenfalls ein Transportbehälter.
+Bei Mitnahme des eigenen Rades mit dem Flieger muss allenfalls ein Transportbehälter gekauft oder gemietet werden.
 Die Preisspanne in einem Vergleich von 4 Radkoffern und 6 Radtaschen in der Zeitschrift RoadBIKE ging von EUR 300 bis 800
 \cite{Brunker2015radkoffer}.
 Das ist ein Haufen Schotter.
 
+\begin{table}
+  \centering
+  \begin{tabular}{lrl}
+    \toprule
+        Anbieter-Website & CHF/Euro & Bemerkungen \\
+    \midrule
+        \url{hoechstform.ch} & 1500/\textsl{1357} & Frühbuch-Preis, 4-Stern-Hotel, Wellness-Anlage \\
+        \url{www.champions-training.de} & \textsl{618}/559 & im DZ, 4-Stern-Hotel, Wellness-Anlage \\
+        \url{www.huerzeler.com} & 645/\textsl{584} & incl. Flug ab Zürich od. Basel\\
+        \url{www.radsport-mallorca.de} & 495/445 & im DZ \\
+        \url{www.kollerbike.ch} & 413/\textsl{373} & 3-Personen-Appartement, 3-Stern-Hotel \\
+    \bottomrule
+  \end{tabular}
+  \caption{Preisübersicht Februar 2016 für eine Woche Rennrad-Training in Mallorca,
+    von deutschen und schweizerischen Anbietern.
+    Jeweils unter Berücksichtigung des günstigsten Angebotes.
+    Wenn nichts angegeben sind die Preise ohne Flug und ohne Miet-Rennrad.
+  Preise in kursiv sind jeweils von der anderen Währung umgerechnet.}
+  \label{tab:preisvergleich}
+\end{table}
+
+
 % Hier noch: Verhältnis gefahrener Trainingskilometer zu aufgewendetem Geld, bzw. aufgewendeten Ferientagen.
 
-Doch fast noch wertvoller als Geld ist heute Zeit.
+Doch für die meisten noch knapper als Geld ist heute Zeit.
 Bei einem TL in einem anderen Gegend von Europa muss realistischerweise für Hin- und Rückreise je einen Tag gerechnet werden.
 Zwei wertvolle Tage, die man in irgenwelchen Flughäfen und nicht im Sattel sitzt?
 Da blutet das Herz.
