Kleine Änderungen im Abschnitt 'Vorteile'

--- a/main.tex
+++ b/main.tex
@@ -127,21 +127,19 @@ Das ist ein Haufen Schotter.
   \label{tab:preisvergleich}
 \end{table}
 
-
 % Hier noch: Verhältnis gefahrener Trainingskilometer zu aufgewendetem Geld, bzw. aufgewendeten Ferientagen.
 
 Doch für die meisten noch knapper als Geld ist heute Zeit.
 Bei einem TL in einem anderen Gegend von Europa muss realistischerweise für Hin- und Rückreise je einen Tag gerechnet werden.
-Zwei wertvolle Tage, die man in irgenwelchen Flughäfen und nicht im Sattel sitzt?
+Zwei wertvolle Tage, die man in irgenwelchem Flugzeug oder Transferbus und nicht im Sattel sitzt?
 Da blutet das Herz.
 
-Auch ein gut eingerichtetes Hotel bietet nicht die gleich gute Infrastruktur, wie sie zu Hause zur verfügung steht.
-Insbesondere wer eine gut ausgerüstete Werkstatt zu Hause hat, wird sich bei einer allfälligen Reparatur mit dem
-mitgenommenen Notset nach seiner gewohnten Ausrüstung sehnen.
-Dazu kommen noch allfällige Fachliteratur, Einkaufsmöglichkeiten (Fachgeschäft) bei Bedarf und schneller Internetzugang.
+Auch ein gut ausgestattetes Hotel bietet nicht die gleich gute Infrastruktur, wie sie zu Hause zur verfügung steht.
+Auch wer seinen Koffer mit Werkzeug füllt, wird das notwenige Teil im TL nicht dabei haben.
+Dazu kommen noch allfällige Fachliteratur, Einkaufsmöglichkeiten (Fachgeschäfte) bei Bedarf und schneller Internetzugang.
 
 Auch ein Trainingslager, dass unterschiedliche Leistungsstufen anbietet wird ein Kompromiss sein.
-Vielleicht arbeitet man selber noch am Grundlagentraining, landet aber in einer Gruppe, die viel Intervaltraining absolviert?
+Vielleicht arbeitet man selber noch am Grundlagentraining, landet aber in einer Gruppe, die dauerend im Angriffsmodus fährt?
 Nur zu Hause und alleine kann man die eigenen Trainingsziele perfekt umsetzen und muss keine Kompromisse bezüglich Art und Umfang des Trainings eingehen.
 
 Der Zeitpunkt ist nicht von der Planung (oder freien Plätzen)des Anbieters abhängig, sondern kann optimal gewählt werden.
@@ -152,7 +150,7 @@ Dadurch kann die Nachhaltigkeit sowie auch die Motivation über das ganze Jahr h
 
 \subsection{Nachteile eines \tlzh}
 
-Auch, dass mit dem Training für die Saison aufgrund der klimatischen Verhältnisse am Trainingsort früher begonnen werden kann.
+Wohl der Hauptgrund, dass mit dem Training für die Saison aufgrund der klimatischen Verhältnisse am Trainingsort früher begonnen werden kann.
 Ein \tlzh ist natürlich -- weil weniger exotisch -- allenfalls weniger motivierender als ein Trainingscamp in Mallorca, Malta oder der Toscana.
 
 In einem Trainingslager hunderte von Kilometern zu Hause kann man sich ganz auf die gliebte Sache konzentrieren.
