Änderungen im Abschnitt 'Nachteile'

--- a/main.tex
+++ b/main.tex
@@ -150,21 +150,24 @@ Dadurch kann die Nachhaltigkeit sowie auch die Motivation über das ganze Jahr h
 
 \subsection{Nachteile eines \tlzh}
 
-Wohl der Hauptgrund, dass mit dem Training für die Saison aufgrund der klimatischen Verhältnisse am Trainingsort früher begonnen werden kann.
-Ein \tlzh ist natürlich -- weil weniger exotisch -- allenfalls weniger motivierender als ein Trainingscamp in Mallorca, Malta oder der Toscana.
+Dass mit dem Training für die Saison aufgrund der klimatischen Verhältnisse am Trainingsort früher begonnen werden kann,
+kann umgekehrt natürlich als Nachteil für ein \tlzh{} betrachtet werden.
 
-In einem Trainingslager hunderte von Kilometern zu Hause kann man sich ganz auf die gliebte Sache konzentrieren.
-Die alltäglichen Pflichten -- Verpflegung, Haushalt -- werden einem weitgehend abgenommen.
-Abgrenzung zum Alltag ist deutlich schwieriger als weit weg von zu Hause (Familie, Beruf).
+Ein \tlzh ist darüber hinaus -- weil weniger exotisch -- allenfalls weniger motivierender als ein Trainingscamp auf Mallorca, Malta oder in der Toscana.
 
-Es fehlen zu Hause die üblichen <<Profi-Einheiten>>: kein Guide, kein Begleitwagen mit Reservevelo, keine Massage im Hotel.
-Die Verwöhn-Infrastruktur fehlt (Halbpension, Wellnessbereich, Bettenmachen).
+In einem Trainingslager hunderte von Kilometern zu Hause fällt die Abgrenzung zum Alltag weniger schwer und
+man kann sich ganz auf die gliebte Sache konzentrieren.
+Die alltäglichen Pflichten -- Einkaufen, Kochen, Bett machen -- werden einem in einem Hotel abgenommen.
+
+Es fehlen zu Hause das gewisse \emph{Profi-Equipment}: kein Guide, kein Begleitwagen, keine Massage im Hotel.
 
 Das Fahren in der Gruppe kann nicht speziell geübt werden.
 
-Kein sozialer Bonus, mit einer Woche Radfahren zu Hause kann schlecht angegeben werden.
-Insbesonderen die <<soft facts>>, welche ein Traininglager im Süden ausmachen werden bei \citeNP{Friedrich2008trainingslager}
+Bei der Hausrunde fehlt der soziale Kick, der mit einer Woche Radfahren in einer südlichen Feriendestination verbunden ist.
+Insbesonderen die <<weichen Fakten>>, welche ein Traininglager im Süden ausmachen werden bei \citeNP{Friedrich2008trainingslager}
 schön beschrieben.
+
+Der folgende Text beschäftigt sich nicht zuletzt auch mit diesen -- in meinen Augen nicht wirklich relevanten -- Nachteilen.
 
 \section{Wann ist die richtige Zeit?}
 \label{sec:richtigezeit}
