Abschnitt 'Keine Ziele gesetzt' mit Text gefüllt

--- a/main.tex
+++ b/main.tex
@@ -530,9 +530,34 @@ Aber ich konnte meinen Kopf nicht bei der Sache halten, die liegengebliebene Erk
 Nicht nur hatte ich jeden Tag beim Verschieben ein schlechtes Gewissen,
 ich musste auch dauernd an das verflixte Ding denken und es kostete mich grosse Überwindung, es endlich fertig zu kriegen.
 
-\subsection{Kein Ziel gesetzt}
+\subsection{Keine Ziele gesetzt}
 
-Ziele müssen positiv formuliert und überprüfbar sein.
+Wer auf ein bestimmtes Ziel hin arbeitet ist fokusierter und erfolgreicher.
+Gute Ziele müssen folgende Eigenschaften aufweisen:
+
+\begin{itemize*}
+  \item Sie müssen positiv und knackig formuliert sein.
+  \item Sie müssen konkret sein und einfach überprüft werden können.
+  \item Sie müssen realistisch sein.
+  \item Sie dürfen nicht von äusseren Bedingungen abhängig sein.
+  \item Sie müssen schriftlich aufgeschrieben und gut sichtbar aufgehängt werden.
+\end{itemize*}
+
+Ebenfalls falsch wäre es, sich zu viele Ziele vorzunehmen.
+Da bestünde die Gefahr, den Fokus zu verlieren.
+
+Gute Radport-typische Ziele sind beispielsweise die laufend ausgeschriebenen \textsl{Challanges} auf Strava (\url{http://www.strava.com}).
+Man kann sich als registrierte User bestimmte monatliche Ziele vormerken.
+Typischerweise eine bestimmte Anzahl zurückgelegter Kilometer oder eine Anzahl Höhenmeter.
+Beim Erreichen des Ziele erhält man eine virtuelle \textsl{Trophy} in Form eines Abzeichens auf der Profilseite.
+Der Nachteil ist, dass die Ziele nicht frei gewählt werden können -- sind also je nach Trainingsstand allenfalls zu leicht oder zu schwer.
+
+Eine Website, die sich ganz dem Erreichen eines bestimmten Zieles verschrieben hat ist Stickk (\url{http://www.stickk.com}).
+Es lassen sich hier frei Ziele formulieren.
+Der spezielle Anreiz ist, dass man gewissermassen auf sich selbst wetten kann.
+Das Geld ist futsch, wenn das Ziel nicht erreicht wird.
+Um Schummeln zu umgehen, können Schiedsrichter ernannt werden (z.B. Kollegen, die Ehefrau), die das Erreichen des Ziels bestätigen müssen.
+Studien haben gezeigt, dass Ziele, bei denen es um Geld geht eher erreicht werden, als wenn es eine reine <<Ehrensache>> bleibt.
 
 \subsection{Ernährung vernachlässigen}
 
