Screenshot stickk.com angefügt

--- a/main.tex
+++ b/main.tex
@@ -559,6 +559,14 @@ Das Geld ist futsch, wenn das Ziel nicht erreicht wird.
 Um Schummeln zu umgehen, können Schiedsrichter ernannt werden (z.B. Kollegen, die Ehefrau), die das Erreichen des Ziels bestätigen müssen.
 Studien haben gezeigt, dass Ziele, bei denen es um Geld geht eher erreicht werden, als wenn es eine reine <<Ehrensache>> bleibt.
 
+\begin{figure}[htpb]
+  \centering
+  \includegraphics[width=0.7\textwidth]{figs/stickkcom.jpg}
+  \caption{Auf der Website lassen sich frei Ziele formulieren und darauf eine Wette abschliessen.}
+  \label{fig:stickkcom}
+\end{figure}
+
+
 \subsection{Ernährung vernachlässigen}
 
 Das Risiko ist bei einem TL in einem exotischen Ort mit einem verlockenden Buffet sicher grösser.
