Abschnitt 'ungenügende Vorbereitungen' mit Text gefüllt

--- a/main.tex
+++ b/main.tex
@@ -486,6 +486,7 @@ Diese kann genutzt werden, um Projekte rund um das \rv{} umzusetzen.
 
 
 \section{Satellitenwochenende vor und nach dem Lager}
+\label{sec:satellitenwochenende}
 
 Den Effekt eines \tlzh{} lässt sich mit der Nutzung der vor und nachgeschalteten Wochenende deutlich verstärken.
 Gemeint sind nicht die Wochenenden, die den freien Tagen unmittelbar anschliessen -- diese gehören ja noch zum TL.
@@ -518,6 +519,18 @@ Bei einem \tlzh{} kommen meines Erachtens noch ein paar Stolpersteine dazu.
 
 \subsection{Keine oder ungenügende Vorbereitung}
 
+Die vielleicht grösste Gefahr eines \tlzh{} ist, dass man es \emph{zu wenig ernst} nimmt.
+Wenn man eine Reise organisiert, mit Hotel im Ausland, Linienflug, Kofferpacken und Geld wechseln, 
+dann kommt man ganz automatisch in einen andere Stimmung.
+Herkömmlicherweise nennt man das auch \emph{Reisefieber}.
+Es beinhaltet diese angespannte Stimmungslage, in der man den Fokus auf das (entfernte) Ziel hat und der Alltag am Rand des Sichtfeldes verschwindet.
+
+Gerade \emph{weil} man bei einem \tlzh{} nicht diesen Aufwand betreiben muss, besteht die Gefahr,
+dass man bezüglich Vorbereitungen die Zügel schleifen lässt.
+Das Trainingslager beginnt nämlich ab dem Moment, an dem man am letzten Tag von der Arbeit kommt und
+die Mappe, den Aktenkoffer, den City-Rucksack in die Ecke stellt.
+Innerlich wird dann das \textsl{maillot jaune} übergestreift.
+Die Vorbereitungen sind schon alle erledigt (Beschrieben im Abschnitt \ref{sec:satellitenwochenende}).
 
 \subsection{Schwieriges Nebenprojekt, die man <<nebenbei>> noch erledigen will}
 
