--- a/main.tex
+++ b/main.tex
@@ -573,6 +573,15 @@ Das Geld ist futsch, wenn das Ziel nicht erreicht wird.
 Um Schummeln zu umgehen, können Schiedsrichter ernannt werden (z.B. Kollegen, die Ehefrau), die das Erreichen des Ziels bestätigen müssen.
 Studien haben gezeigt, dass Ziele, bei denen es um Geld geht eher erreicht werden, als wenn es eine reine <<Ehrensache>> bleibt.
 
+Schon nur das Dokumentieren der eigenen Leistung hilft einem sich selbt anzuspornen,
+das ist wissenschaftlich erwiesen.
+Diese Möglichkeit besteht auch mit dem jährlichen <<Winterpokal>> (\url{http://winterpokal.rennrad-news.de/} oder
+auf <<Fitocracy>> (\url{https://www.fitocracy.com/home/}).
+Insbesondere Fitocracy
+(eine Wortschöpfung aus <<fitness>> und <<democracy>>)
+betont den spielerischen Charakter der körperlichen Betätigung mit zu erlangenden Punkten und Levels.
+
+
 \begin{figure}[htb]
   \centering
   \includegraphics[width=0.7\textwidth]{figs/stickkcom.jpg}
