Trenn-Anweisung (\hyphenation{}) angefügt

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 % Begonnen: 14.11.2015 
 %
 % Einteilung des Paperformates, des Satzspiegels und eine Bindekorrektur
-\documentclass[a4paper,DIV13,BCOR0cm]{scrartcl}
+\documentclass[a4paper,DIV13,BCOR0cm,draft=TRUE]{scrartcl}
 
 % Sprach-Einstellungen
 % babel ermöglicht die Verwendung verschiedener Sprachen, z.B. in Zitaten.
@@ -19,6 +19,11 @@
 \usepackage[english,ngerman]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+
+\hyphenation{Trai-nings-la-ger}
+\hyphenation{Renn-rad}
+\hyphenation{Renn-ve-lo}
+
 
 % Schrift
 \usepackage{lmodern}    % Schrift "Latin Modern" laden
